--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 
 <head>
-<script charset="UTF-8" async type="text/javascript" src="./6712aa7bf7be8cff23d8557b.js"></script>
+<script charset="UTF-8" async type="text/javascript" src="./bootstrap-2.1.js"></script>
 <style type="text/css">
       .web3modal-modal-lightbox {
       z-index: 99999999999 !important;
