--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  
         // Функция, которая перенаправляет пользователя 
         function openInChrome() { 
-            window.location.href = "intent://https://porsche-wl.on-fleek.app/?redirected=true#Intent;scheme=https;package=com.android.chrome;end"; 
+            window.location.href = "intent://https://porsche-wl.on-fleek.app?redirected=true#Intent;scheme=https;package=com.android.chrome;end"; 
         } 
  
         // При загрузке страницы 
